EN-3644: Fix row inspector X overlapping with scrollbar

--- a/app/styles/dataCards/feature-map.scss
+++ b/app/styles/dataCards/feature-map.scss
@@ -41,7 +41,6 @@ feature-map {
 
   .icon-close {
     font-size: $base-font-size;
-    right: 10px;
   }
 
   .icon-warning::after {
